fix: set justify-content in main{} to 'start' to fix layout issue

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -247,7 +247,7 @@ main {
   flex: 1 0 auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   min-height: 100vh;
   margin-top: 0px;
